breakpoint update and carousel overlap fix

--- a/blocks/herobanner/herobanner.css
+++ b/blocks/herobanner/herobanner.css
@@ -361,6 +361,9 @@
     position: relative;
     margin-bottom: 24px;
   }
+  .hero-banner-container.hero-carousal-variation {
+    height: 654px;
+  }
   .hero-arrow-icon {
     padding: 10px;
   }
